--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OCR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <style>
         body {
             background-color: grey;
@@ -13,6 +14,9 @@
     </style>
 </head>
 <body>
+    <video id="webcam" autoplay playsinline></video>
+    <canvas id="canvas" class="d-none"></canvas>
+    <!-- Toast -->
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
         <div id="toast" class="toast align-items-center text-white border-0" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
@@ -21,15 +25,22 @@
             </div>
         </div>
     </div>
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js"></script>
     <script>
-        if ('mediaDevices' in navigator && 'getUserMedia' in navigator.mediaDevices) {
-            //navigator.mediaDevices.getUserMedia({video: true});
-        }
-        else {            
+        const webcamElement = document.getElementById('webcam');
+        const canvasElement = document.getElementById('canvas');
+
+        const webcam = new Webcam(webcamElement, 'user', canvasElement, null);
+        webcam.start()
+        .then(result =>{
+            
+        })
+        .catch(err => {
             swal('No Camera Found!', 'Sorry, this application requires a camera to function!', 'error');
-        }
+        });
 
         function toast(body, type = 'notice') {
             const toast = new bootstrap.Toast(document.getElementById('toast'));
